--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@ a {
 }
 
 body {
-  background-color: rgb(0, 0, 0);
+  background-color: black;
   font-family: "Poppins", sans-serif;
   color: #fdfffc;
   display: flex;
@@ -283,28 +283,5 @@ body {
 @keyframes background-scroll {
   100% {
     background-position: 50px 50px;
-  }
-}
-
-.weirdShape {
-  width: 1000px;
-  height: 1005px;
-  position: absolute;
-  z-index: -1;
-  top: -23%;
-  left: 50%;
-  margin-left: -500px;
-  margin-top: -500px;
-  border-radius: 37%;
-  background: #a3a3a3;
-  animation: weirdShape 0.9s infinite linear;
-}
-
-@keyframes weirdShape {
-  from {
-    transform: rotate(0deg);
-  }
-  from {
-    transform: rotate(360deg);
   }
 }
